// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - badge danger outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-danger"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge danger renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-danger"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge dark outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-dark"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge dark renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-dark"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge info outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-info"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge info renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-info"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge light outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-light"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge light renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-light"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge primary outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-primary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge primary renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-primary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge renders correctly as a rounded pill 1`] = `
<jest>
  <span
    class="bcl-badge badge rounded-pill bg-primary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge renders correctly dismissible 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-primary"
  >
    A simple badge!
    <span
      aria-hidden="true"
      class="icon--close"
    >
      <svg
        class="bcl-icon bi icon--s"
      >
        <use
          xlink:href="/icons.svg#x-lg"
        />
      </svg>
    </span>
  </span>
</jest>
`;

exports[`OE - badge renders correctly with a link 1`] = `
<jest>
  <a
    class="bcl-badge badge bg-primary"
    href="http://example.com"
    title="A simple badge!"
  >
    A simple badge!
  </a>
</jest>
`;

exports[`OE - badge renders correctly with assistive text 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-primary"
  >
    <span
      class="visually-hidden"
    >
      An assistive text
    </span>
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge renders correctly with title 1`] = `
<jest>
  <a
    class="bcl-badge badge bg-primary"
    href="http://example.com"
    title="new title"
  >
    A simple badge!
  </a>
</jest>
`;

exports[`OE - badge secondary outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-secondary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge secondary renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-secondary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge success outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-success"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge success renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-success"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge warning outline renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge badge-outline-warning"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge warning renders correctly 1`] = `
<jest>
  <span
    class="bcl-badge badge bg-warning"
  >
    A simple badge!
  </span>
</jest>
`;
